# LearnOpenGL

./: .gitignore  CMakeLists.txt  glad.c  main.cpp
Include/glad/: glad.h
include/glad/: glad.h
src/: glad.c  main.cpp
